// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a single child element 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`2. two child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__Base>
              <div>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;

exports[`3. three child elements 1`] = `
<configweb__Base>
  <div>
    <responsiveweb__SliceContainer>
      <div>
        <responsiveweb>
          <div>
            <responsiveweb__Base>
              <div>
                <div>
                  opinion
                </div>
              </div>
            </responsiveweb__Base>
            <responsiveweb>
              <div />
            </responsiveweb>
            <responsiveweb__Base>
              <div>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-1
                    </div>
                  </div>
                </responsiveweb__Base>
                <responsiveweb__Base>
                  <div>
                    <div>
                      support-2
                    </div>
                  </div>
                </responsiveweb__Base>
              </div>
            </responsiveweb__Base>
          </div>
        </responsiveweb>
      </div>
    </responsiveweb__SliceContainer>
  </div>
</configweb__Base>
`;
